@@ -161,3 +161,4 @@ Revision	Version Updated		Log Message
 144		C++			Excluded unneeded files from the project (but keeping them in case they're useful later).
 145		C++			Simplified dependencies.
 146		C++			Province numbers and names come from V2 install.
+147		C++			Cleaned up the output a bit.
